--- a/css/index.css
+++ b/css/index.css
@@ -1,31 +1,182 @@
+:root {
+  --main-background: #ffffff;
+  --primary-color: rgba(173, 72, 68, 1);
+  --mobile-menu-color: rgba(216, 216, 216, 1);
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  background-color: var(--main-background);
+  font-family: "Nunito", sans-serif;
+  font-size: 12px;
+
+}
+
+ul {
+  padding-left: 0;
+}
+
+li {
+  list-style: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  margin: 0;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.container-header {
+  display: flex;
+  align-items: center;
+  padding: 7px 15px;
+  margin: 0;
+  max-height: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: space-between;
+}
+
+.container-header>.logo {
+  width: 100px;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.container-hero {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15;
+  padding-right: 15;
+}
+
+.section {
+  padding-top: 30px;
+ padding-bottom: 30px;
+}
+
+.container-footer{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+section:nth-child(2n + 1) {
+  background-color: #F6F6F6;
+}
+
+.btn-menu {
+  display: inline-block;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  margin-left: auto;
+  z-index: 99;
+}
+
+.nav-list-desctop {
+  display: none;
+  text-transform: uppercase;
+}
+
+.nav-item-desctop:not(:last-child) {
+  margin-right: 20px;
+}
+
+.nav-item-desctop:nth-child(3) {
+  font-weight: 900;
+}
 
 
-     .parent-underlined {
-      position: relative;
-      display: flex;
-     margin-left: auto;
-      margin-right: auto;
-      width: fit-content; 
-      margin-bottom: 20px;
-    } 
-    .title-hero{
-      font-size: 16px;
-    
-    }
+.backdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.85);
+  margin: 0;
+  padding-top: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
+  height: 100vw;
+  z-index: 1;
+  max-width: 100vw;
+  z-index: 9;
+  display: none;
+}
 
-  .subtitle{
+/* styles for mobile-menu  */
+
+.container-header>.is-open {
+  display: block;
+}
+
+.list-menu-mobile {
+  background-color: var(--primary-color);
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-transform: uppercase;
+}
+
+.item-menu-mobile:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.item-menu-mobile>.current {
+  text-decoration: none;
+  color: white;
+}
+
+.link-menu-mobile {
+  color: var(--mobile-menu-color);
+}
+
+.parent-underlined {
+  position: relative;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+  margin-bottom: 20px;
+}
+
+.title-hero {
+  font-size: 16px;
+
+}
+
+.subtitle {
+  text-align: center;
   font-size: 14px;
   font-weight: 700;
- }
+}
 
 
 
- .text-center{
+.text-center {
   text-align: center;
- }
+}
 
 
-.underlined::after{
+.underlined::after {
   content: '';
   position: absolute;
   line-height: 80px;
@@ -39,158 +190,345 @@
 
 
 /* section dodatków      */
-.item-number{
+.item-number {
   display: flex;
-align-items: center;
-justify-content: baseline;
+  align-items: center;
+  justify-content: baseline;
   margin-bottom: 15px;
 }
 
-
-
-.nav-list-desctop  {
-  text-transform: uppercase;
-}
-
-
-.number{
-  display: flex;
-  align-items: center;
-  justify-content: center;
- font-size: 16px;
- font-weight: 900;
-   width: 40px;
-  height: 40px;
-  background-color: #ffffff;
-  border-radius: 50%;
-   margin-right: 20px;
-  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0 4px 4px rgba(0, 0, 0, 0.06), 0 1px 1px rgba(0, 0, 0, 0.12);
+.section-dodatek {
+  text-align: center;
+  padding-left: 15px;
+  padding-right: 15px;
   
 }
 
-.section-photo{
+.number {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  font-weight: 900;
+  width: 40px;
+  height: 40px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  margin-right: 20px;
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0 4px 4px rgba(0, 0, 0, 0.06), 0 1px 1px rgba(0, 0, 0, 0.12);
+}
+
+.section-photo {
   display: flex;
   width: 100%;
   justify-content: space-between;
 }
 
-.numer-item-desctop{
+.numer-item-desctop {
   display: flex;
   flex-direction: column;
 }
 
-.icon-item{
+.icon-item {
   display: flex;
   flex-direction: column;
-  align-items: center; 
-  justify-content: center; 
-  height: 100%; 
-text-align: center;
+  justify-content: center;
+  height: 100%;
+  text-align: center;
 }
 
-.icon-item > .title-section{
+.icon-item>.title-section {
   margin-bottom: 15px;
 }
 
-.icon{
- width: 42px;
+.icon {
+  width: 42px;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-  .is-visible {
-    display: none;
+.is-visible {
+  display: none;
+}
+
+.canvas {
+  background-image: url('../images/Vector1.png');
+  background-repeat: no-repeat;
+}
+
+.circle-item {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (min-width: 320px) {
+  .container-header {
+    width: 320px;
   }
+  .container {
+    width: 320px;
+  }
+  .container-hero {
+    width: 320px;
+  }
+  .container-footer{
+    width: 320px;
+  }
+}
 
-  .list-subtitle
-
-  .canvas{
-    background-image: url('../images/Vector1.png');
-    background-repeat: no-repeat;
-     
-    }
-
-    .circle-item{
-     margin-left: auto;
-     margin-right: auto;
-     margin-bottom: 10px;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-
-     
-    }
-
-
-    @media screen and (max-width: 1199px) {
-      .circle-item:nth-child(2n) {
-        margin-left: 15px;
-      }
-    }
-   
-
+@media screen and (max-width: 1199px) {
+  .circle-item:nth-child(2n) {
+    margin-left: 15px;
+  }
+  .description-hero {
+    text-align: center;
+  }
+}
 
 @media screen and (min-width: 1200px) {
   .section {
-  display: flex;
+    display: flex;
   }
-  .circle-item{
+  .circle-item {
     justify-content: flex-start;
   }
-  .circle-list{
+  .circle-list {
     margin-top: 0;
     margin-bottom: 0;
   }
-  
-
-  .description-hero{
-   margin-left: 100px;
-   margin-top: 40px;
-  width: 250px;
+  .description-hero {
+    margin-left: 100px;
+    margin-top: 40px;
+    width: 250px;
+    text-align: start;
   }
+
   .section-dodatek {
     display: flex;
     width: calc((100% - 50px) /3);
     flex-direction: column;
-   border: 1px solid red;
-  align-items: center;
-  justify-content: center;
-      text-align: center;
+    align-items: center;
+    justify-content: center;
   }
+
   .section-dodatek:not(:last-child) {
-   margin-right: 20px;
-    
+    margin-right: 20px;
   }
- .is-visible{
+
+  .is-visible {
     display: block;
   }
-  .circle{
+
+  .circle {
     display: flex;
     justify-content: center;
     align-items: center;
-   
     margin-bottom: 10px;
   }
 
-  .icon-list-js{
+  .icon-list-js {
     display: flex;
     flex-wrap: wrap;
-justify-content: space-between;
-position: relative;
+    justify-content: space-between;
+    position: relative;
   }
-  .icon-item{
+
+  .icon-item {
     width: calc((100% - 33%) / 2);
     border: 1px solid black;
     height: fit-content;
+    border: none;
   }
-  .product-img{
+
+
+
+  .product-img {
     position: absolute;
     top: 30px;
     left: 50%;
     transform: translateX(-50%);
   }
-  .dog-img{
+
+  .dog-img {
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+/*   products page  */
+
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.product-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: calc((100% - 80px) / 4);
+  height: 200px;
+  font-size: 16px;
+  font-weight: 700;
+  border: 2px solid black;
+  background-color: #bebebe;
+}
+
+.section-select {
+  display: flex;
+  margin: 40px auto;
+}
+
+.wrapper {
+  position: relative;
+}
+
+.label-select {
+  padding: 10px 20px;
+  border: 2px solid black;
+  font-size: 18px;
+  font-weight: 900;
+}
+
+.wrapper-count {
+  display: flex
+}
+
+.selected-count {
+  display: inline-block;
+  white-space: nowrap;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+  margin-left: 0;
+  width: 122px;
+  padding: 12px 45px;
+  border: 1px solid black;
+  font-size: 16px;
+  font-weight: 900;
+  color: white;
+  background-color: var(--primary-color);
+}
+
+#item-count {
+  display: inline-block;
+  padding: 12px 18px;
+  min-width: 120px;
+}
+
+#item-count option {
+  display: inline-block;
+  background-color: #e0e0e0;
+  color: #333;
+  font-size: 16px;
+  padding-left: 25px;
+}
+
+.update-icon~span {
+  margin-top: 10px;
+}
+
+@media screen and (max-width: 1199px) {
+
+  .container-header {
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container-header {
+    width: 1200px;
+    padding-left: 160px;
+    justify-content: flex-start;
+  }
+
+  body {
+    padding-top: 60px;
+  }
+
+  .header {
+    position: fixed;
+    z-index: 9;
+    background-color: white;
+    top: 0;
+    left: 0;
+    width: 100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  .container-hero {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+  }
+
+  h1.title-hero {
+    display: none
+  }
+
+  .container {
+    width: 1200px;
+    display: flex;
+  }
+
+  .container-number {
+    display: none;
+  }
+
+  .subtitle {
+    font-size: 18px;
+  }
+
+  .btn-menu {
+    display: none;
+  }
+
+  .nav-list-desctop {
+    display: flex;
+    margin-left: 250px;
+    font-size: 14px;
+  }
+
+  .container-header>.logo {
+    width: 140px;
+  }
+  .icon-item {
+    position: relative;
+    padding: 15px;
+    height: 270px;
    
   }
 
+  .icon {
+    display: none;
+  }
+
+  .update-icon::before {
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-color: #d9d9d9;
+    border-radius: 50%;
+    top: -15px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
+
