modal-window for product

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -3,6 +3,8 @@
     --primary-color: rgba(173, 72, 68, 1);
     --mobile-menu-color: rgba(216, 216, 216, 1);
     --btn-hero: #30AB4C;
+    --backdrop-menu: #FFFFFFD9;
+    ;
    }
   
   html {
