--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,14 +7,12 @@
     margin-left: auto;
     margin-right: auto;
     justify-content: space-between;
+ width: 320px;
   }
   
   .container-header>.logo {
     width: 100px;
-    position: relative;
-    display: flex;
-    align-items: center;
-  }
+   }
   
 
   /* menues for mobile and desctop */
@@ -42,34 +40,34 @@
     font-weight: 900;
   }
 
-  .container-header>.is-open {
-    display: block;
+  .container-header .is-open {
+    opacity: 1; 
+    visibility: visible; 
   }
 
 .backdrop {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(255, 255, 255, 0.85);
-    margin: 0;
-    padding-top: 30px;
-    padding-left: 15px;
-    padding-right: 15px;
-    width: 100%;
-    height: 100vw;
-    z-index: 1;
-    max-width: 100vw;
-    z-index: 9;
-    display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--backdrop-menu);
+  display: flex;
+  justify-content: center;
+  padding-top: 50px;
+  opacity: 0; 
+  visibility: hidden; 
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .list-menu-mobile {
     background-color: var(--primary-color);
     text-align: center;
-    padding-top: 20px;
+     padding-top: 20px;
     padding-bottom: 20px;
     text-transform: uppercase;
-  }
+    width: 300px;
+    }
   
   .item-menu-mobile:not(:last-child) {
     margin-bottom: 15px;
@@ -87,6 +85,7 @@
   @media screen and (max-width: 1199px){
     .container-header {
       width: 320px;
+      position: relative;
     }
   }
 
@@ -101,7 +100,8 @@
       width: 100%;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
-  
+
+ 
     .container-header {
       width: 1200px;
       padding-left: 160px;
