--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -6,8 +6,21 @@
   }
 
 .title-hero {
-    font-size: 16px;
+    font-size: 18px;
   }
+
+  .gradient-text {
+          background: linear-gradient(
+        90deg, 
+        #111111 0%, 
+        #b1b1b1 54%, 
+        #696969 80%, 
+        #b1b1b1 100%
+      );
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
 
   .is-visible {
     display: none;
@@ -38,7 +51,7 @@
   }
   
   .overlay-middle{
-    width: 40%;
+    width: 45%;
  }
 
  @media screen and (min-width: 320px){
@@ -48,33 +61,6 @@
   }
  }
 
- @media screen and (min-width: 1200px) {
-  .btn-hero{
-    background-color: var(--btn-hero)
-  }
-  .description-hero {
-    margin-left: 100px;
-    margin-top: 40px;
-    width: 250px;
-    text-align: start;
-  }
-
-  .circle-list {
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-
-  .circle-item {
-    justify-content: flex-start;
-  }
-
-  .circle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10px;
-  }
- }
 
  @media screen and (max-width: 1199px) {
 
@@ -99,15 +85,13 @@
     display: flex;
     justify-content: center;
   }
-  h1.title-hero {
-    display: none
-  }
+ 
   .section-dodatek {
     display: flex;
     width: calc((100% - 50px) /3);
     flex-direction: column;
    
-    justify-content: center;
+    justify-content: space-between;
   }
 
   .section-dodatek:not(:last-child) {
@@ -115,5 +99,29 @@
   }
   .section {
     display: flex;
+  }
+  .btn-hero{
+    background-color: var(--btn-hero)
+  }
+  .description-hero {
+    margin-left: 100px;
+    margin-top: 40px;
+      text-align: start;
+  }
+
+  .circle-list {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .circle-item {
+    justify-content: flex-start;
+  }
+
+  .circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
   }
  }
