--- a/src/css/product.css
+++ b/src/css/product.css
@@ -24,7 +24,6 @@
   background-color: #bebebe;
 }
 
-
 .section-select {
   display: flex;
 margin: 0 auto 30px;
@@ -41,7 +40,6 @@ margin: 0 auto 30px;
   font-size: 12px;
   font-weight: 700;
 }
-
 
 .selected-count {
   display: inline-block;
@@ -81,6 +79,57 @@ margin: 0 auto 30px;
 
 .product-item{
   width: calc((100% - 20px) / 2);
+}
+
+.modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0; 
+  visibility: hidden; 
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
+}
+
+.is-open{
+  opacity: 1; 
+    visibility: visible;
+}
+
+.wrapper-modal{
+  position: relative;
+}
+
+.content{
+  background-color: #fff;
+ width: 500px;
+ height: 200px;
+ font-weight: 400;
+  border-radius: 5px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  padding: 10px 15px;
+  border-radius: 5px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.content li{
+  margin-bottom: 10px;
+}
+
+.icon-crose{
+position: absolute;
+top: 10px;
+right: 10px;
+z-index: 99;
+width: 20px;
+height: 20px;
 
 }
 
@@ -93,6 +142,11 @@ margin: 0 auto 30px;
      }
   #item-count, .selected-count{
   width: 100%;
+  }
+  .content{
+    width: 250px;
+ height: 150px;
+ font-size: 12;
   }
 }
  
@@ -139,6 +193,7 @@ margin: 0 auto 30px;
     }
     .product-item{
       width: calc((100% - 80px) / 4);
+      cursor: pointer;
      }
      
      .selected-count{
