--- a/src/css/header.css
+++ b/src/css/header.css
@@ -58,6 +58,7 @@
   opacity: 0; 
   visibility: hidden; 
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 11;
   }
 
   .list-menu-mobile {
