--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -32,8 +32,25 @@
     width: 100%;
      text-align: center;
     padding-left: 15px;
-    padding-right: 15px;
+    padding-right: 15px;  
   }  
+
+  .section{
+    position: relative;
+  }
+
+  .section-dodatek::after{
+    content: '';
+    position: absolute;
+    left: -20px;
+    bottom: 40px;
+    width: 30px;
+    height: 30px;
+    background-image: url('../images/Vector_min_1.png');
+    background-size: 200px auto;
+    background-repeat: no-repeat;
+    background-position: left 20% ; 
+  }
 
   .section-photo {
     display: flex;
