--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,11 +16,10 @@
 
 section:nth-child(2n+1){
   background-color: #f6f6f6;
-}
+  padding-bottom: 40px;}
 
 section:nth-child(1) {
- 
-  background-image: url('../images/Vector1.png'), url('../images/Vector2.png');
+   background-image: url('../images/Vector1.png'), url('../images/Vector2.png');
   background-size: 100px auto, 100px auto; 
   background-repeat: no-repeat;
   background-position: left 25% , right 30%;
@@ -61,11 +60,17 @@ section:nth-child(1) {
   display: none;
 }
 
-
-
 @media screen and (min-width: 320px) {
   .container {
     width: 320px;
+  }
+}
+
+@media screen and (min-width: 768px){
+  .container{
+    width: 768px;
+    display: flex;
+  justify-content: center;
   }
 }
 
@@ -79,8 +84,7 @@ section:nth-child(1) {
 
   .container {
     width: 1200px;
-    display: flex;
-  }
+    }
   .description{
     font-size: 14px;
 }
@@ -95,7 +99,4 @@ section:nth-child(1) {
     .subtitle {
       font-size: 18px;
     }
-      
-
-
 }
