--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,49 +1,47 @@
 .container-header {
-    display: flex;
-    align-items: center;
-    padding: 7px 15px;
-    margin: 0;
-    max-height: 60px;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: space-between;
- width: 320px;
-  }
-  
-  .container-header>.logo {
-    width: 100px;
-   }
-  
+  display: flex;
+  align-items: center;
+  padding: 7px 15px;
+  margin: 0;
+  max-height: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: space-between;
+  width: 320px;
+}
 
-  /* menues for mobile and desctop */
+.container-header > .logo {
+  width: 100px;
+}
 
-  .btn-menu {
-    display: inline-block;
-    padding: 0;
-    border: none;
-    background-color: transparent;
-    margin-left: auto;
-    z-index: 99;
-  }
+/* menues for mobile and desctop */
 
-   
-  .nav-list-desctop {
-    display: none;
-    text-transform: uppercase;
-  }
-  
-  .nav-item-desctop:not(:last-child) {
-    margin-right: 20px;
-  }
-  
-  .nav-item-desctop:nth-child(3) {
-    font-weight: 900;
-  }
+.btn-menu {
+  display: inline-block;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  margin-left: auto;
+  z-index: 99;
+}
 
-  .container-header .is-open {
-    opacity: 1; 
-    visibility: visible; 
-  }
+.nav-list-desctop {
+  display: none;
+  text-transform: uppercase;
+}
+
+.nav-item-desctop:not(:last-child) {
+  margin-right: 20px;
+}
+
+.nav-item-desctop:nth-child(3) {
+  font-weight: 900;
+}
+
+.container-header .is-open {
+  opacity: 1;
+  visibility: visible;
+}
 
 .backdrop {
   position: fixed;
@@ -55,68 +53,81 @@
   display: flex;
   justify-content: center;
   padding-top: 50px;
-  opacity: 0; 
-  visibility: hidden; 
+  opacity: 0;
+  visibility: hidden;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 11;
+}
+
+.list-menu-mobile {
+  background-color: var(--primary-color);
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-transform: uppercase;
+  width: 300px;
+}
+
+.item-menu-mobile:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.item-menu-mobile > .current {
+  text-decoration: none;
+  color: var(--main-background);
+}
+
+.link-menu-mobile {
+  color: var(--mobile-menu-color);
+}
+
+@media screen and (min-width: 320px) {
+  .container-header {
+    width: 320px;
+    position: relative;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container-header {
+    width: 768px;
+    position: static;
+    }
+  .header {
+    position: fixed;
+    z-index: 9;
+    background-color: white;
+    top: 0;
+    left: 0;
+    width: 100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 
-  .list-menu-mobile {
-    background-color: var(--primary-color);
-    text-align: center;
-     padding-top: 20px;
-    padding-bottom: 20px;
-    text-transform: uppercase;
-    width: 300px;
-    }
-  
-  .item-menu-mobile:not(:last-child) {
-    margin-bottom: 15px;
+  .container-header > .logo {
+    width: 120px;
   }
-  
-  .item-menu-mobile>.current {
-    text-decoration: none;
-    color: var(--main-background);
+  .nav-list-desctop {
+    display: flex;
+    font-size: 14px;
   }
-  
-  .link-menu-mobile {
-    color: var(--mobile-menu-color);
+  .btn-menu {
+    display: none;
   }
-  
-  @media screen and (max-width: 1199px){
-    .container-header {
-      width: 320px;
-      position: relative;
-    }
+}
+
+@media screen and (min-width: 1200px) {
+  .container-header {
+    width: 1200px;
+    padding-left: 160px;
+    justify-content: flex-start;
   }
 
- 
-  @media screen and (min-width: 1200px){
-    .header {
-      position: fixed;
-      z-index: 9;
-      background-color: white;
-      top: 0;
-      left: 0;
-      width: 100%;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
- 
-    .container-header {
-      width: 1200px;
-      padding-left: 160px;
-      justify-content: flex-start;
-    }
-    .btn-menu {
-      display: none;
-    }
-    .container-header>.logo {
-      width: 140px;
-    }
-    .nav-list-desctop {
-      display: flex;
-      margin-left: 250px;
-      font-size: 14px;
-    }
+  .container-header > .logo {
+    width: 140px;
   }
+  .nav-list-desctop {
+    display: flex;
+    margin-left: 250px;
+    font-size: 14px;
+  }
+}
