--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,124 +1,151 @@
 .container-hero {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 80px;
-    padding-left: 15;
-    padding-right: 15;
-  }
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15;
+  padding-right: 15;
+}
 
 .container-hero .title-hero {
-    font-size: 18px;
-    margin-top: 30px;
-  }
-.container-hero .description{
+  font-size: 18px;
   margin-top: 30px;
 }
 
-  .gradient-text {
-          background: linear-gradient(
-        90deg, 
-        #111111 0%, 
-        #b1b1b1 54%, 
-        #696969 80%, 
-        #b1b1b1 100%
-      );
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
+.container-hero .description {
+  margin-top: 30px;
+}
 
+.gradient-text {
+  background: linear-gradient(90deg,
+      #111111 0%,
+      #b1b1b1 54%,
+      #696969 80%,
+      #b1b1b1 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
-  .is-visible {
-    display: none;
-  }
+.is-visible {
+  display: none;
+}
 
-  /*   dodatki  */
+/*   dodatki  */
 
-  .section-dodatek{
-    width: 100%;
-     text-align: center;
-    padding-left: 15px;
-    padding-right: 15px;  
-  }  
+.section{
+  padding-bottom: 30px;
+}
+.section-dodatek {
+  width: 100%;
+  text-align: center;
+  padding-left: 15px;
+  padding-right: 15px;
+}
 
- 
+.section-photo {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
 
-  .section-photo {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-   }
+.circle-item {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-   .circle-item {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .overlay-middle{
-    width: 45%;
- }
+.overlay-middle {
+  width: 45%;
+}
 
- @media screen and (min-width: 320px){
-
+@media screen and (min-width: 320px) {
   .container-hero {
     width: 320px;
   }
- }
+}
 
-
- @media screen and (max-width: 1199px) {
-
+@media screen and (max-width: 1199px) {
   .circle-item:nth-child(2n) {
-   margin-left: 15px;
- }
- .description-hero {
-   text-align: center;
- }
- 
- }
+    margin-left: 15px;
+  }
 
- @media screen and (min-width: 1200px){
+  .description-hero {
+    text-align: center;
+  }
+
+}
+
+@media screen and (min-width: 768px) {
+  .container-hero {
+    width: 768px;
+    padding-top: 50px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+
+  .description-hero {
+    margin-left: 30px;
+  }
+
+  .section-dodatek {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+ 
+  .overlay-base{
+    overflow: hidden;
+    display: flex;
+    border-radius: 7px;
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+    height: 340px;
+  }
+  .overlay-img{
+    width: 100%;
+  }
+  .overlay-img img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+  }
+
+  .overlay-middle img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .is-visible {
     display: block;
   }
+
   .container-hero {
     width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-  }
- 
-  .section-dodatek {
-    display: flex;
-    width: calc((100% - 50px) /3);
-    flex-direction: column;
-   
-    justify-content: space-between;
   }
 
-  .section-dodatek:not(:last-child) {
-    margin-right: 20px;
-  }
-  .section {
-    display: flex;
-  }
-  .btn-hero{
+  .btn-hero {
     background-color: var(--btn-hero)
   }
+
   .description-hero {
     margin-left: 100px;
     margin-top: 40px;
-      text-align: start;
+    text-align: start;
   }
 
   .circle-list {
     margin-top: 0;
     margin-bottom: 0;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
   .circle-item {
@@ -131,4 +158,5 @@
     align-items: center;
     margin-bottom: 10px;
   }
- }
+
+}
