--- a/src/css/icon-section.css
+++ b/src/css/icon-section.css
@@ -2,12 +2,10 @@
 .icon-item {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    height: 100%;
-    text-align: center;
+       text-align: center;
+   
   }
-
-  
+   
 .icon-item>.title-section {
     margin-bottom: 15px;
   }
@@ -23,37 +21,46 @@
     margin-top: 10px;
   }
 
-  @media screen and (min-width: 320px){
-    .container-footer{
-      width: 320px;
-    }
+  .dog-img {
+    margin-left: auto;
+    margin-right: auto;
   }
 
-  @media screen and (min-width: 1200px){
+  @media screen and (min-width: 768px){
+    .icon {
+      display: none;
+    }
+
+    .icon-section{
+    position: relative;
+    margin-top: 30px;
+    }
+
     .icon-list-js {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      position: relative;
+       }
+
+      .icon-item {
+        position: relative;
+        width: calc((100% - 33%) / 2);
+        padding: 15px;
+      
+       }
+    
+       .icon-item:not(:nth-last-child(-n+2)) {
+        margin-bottom: 30px;
     }
-    .icon-item {
-      width: calc((100% - 33%) / 2);
-      height: fit-content;
-      position: relative;
-      padding: 15px;
-      height: 270px;
-    }
-    .icon {
-      display: none;
-    }
+       
     .update-icon::before {
       content: '';
       position: absolute;
-      width: 50px;
-      height: 50px;
+      width: 40px;
+      height: 40px;
       background-color: #d9d9d9;
       border-radius: 50%;
-      top: -15px;
+      top: -40px;
       left: 50%;
       transform: translateX(-50%);
     }
@@ -62,10 +69,33 @@
       top: 30px;
       left: 50%;
       transform: translateX(-50%);
-    }
-  
-    .dog-img {
-      margin-left: auto;
-      margin-right: auto;
+      max-width: 250px;
     }
   }
+
+  @media screen and (min-width: 1200px){
+    .icon-item:not(:nth-last-child(-n+2)) {
+      margin-bottom: 70px;
+  }
+   
+    .update-icon::before {
+      width: 50px;
+      height: 50px;
+      top: -60px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    
+    .product-img {
+     width: 100%;
+    }
+
+    .btn-buy{
+      position: absolute;
+      top: 70%;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: var(--primary-color);
+    }
+  
+    }
