--- a/src/css/icon-section.css
+++ b/src/css/icon-section.css
@@ -3,8 +3,8 @@
     display: flex;
     flex-direction: column;
        text-align: center;
-   
-  }
+   cursor: pointer;
+   }
    
 .icon-item>.title-section {
     margin-bottom: 15px;
@@ -34,6 +34,23 @@
     .icon-section{
     position: relative;
     margin-top: 30px;
+    }
+   
+    .update-icon::after{
+      content: "";
+      position: absolute;
+      line-height: 80px;
+      top: 35px;
+      left: 0;
+      width: 50%;
+      transform: translateX(50%);
+      height: 1px;
+      background-color: transparent;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     }
+
+     .icon-item:hover > .update-icon::after {
+      background-color: black;
     }
 
     .icon-list-js {
@@ -76,6 +93,10 @@
   @media screen and (min-width: 1200px){
     .icon-item:not(:nth-last-child(-n+2)) {
       margin-bottom: 70px;
+  }
+
+  .update-icon::after{
+    top: 40px;
   }
    
     .update-icon::before {
