--- a/src/css/product.css
+++ b/src/css/product.css
@@ -1,29 +1,4 @@
 
-.product-list {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  gap: 30px; 
-}
-
-.product-item{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 16px;
-  font-weight: 700;
-  border: 2px solid black;
-  background-color: #bebebe;
-  cursor: pointer;
-  margin-bottom: 20px; 
-}
-
-
-
-
 .section-select {
   display: flex;
 margin: 0 auto 30px;
@@ -60,21 +35,6 @@ margin: 0 auto 30px;
   text-align: center;
   font-size: 12px;
   margin-top: 0;
- 
-}
-
-#item-count {
-  display: inline-block;
-  padding: 12px 18px;
-  min-width: 120px;
-}
-
-#item-count option {
-  display: inline-block;
-  background-color: #e0e0e0;
-  color: #333;
-  font-size: 16px;
-  padding-left: 25px;
 }
 
 .modal{
@@ -128,14 +88,44 @@ width: 20px;
 height: 20px;
 }
 
+  .product-list {
+    display: flex;
+    flex-wrap: wrap; 
+    gap: 20px; 
+    margin-top: 70px;
+    margin-left: auto;
+    margin-right: auto;
 
+}
+
+.product-item{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 700;
+  border: 2px solid black;
+  background-color: #bebebe;
+  cursor: pointer;
+  position: relative; 
+  text-align: center;
+  overflow: hidden;
+}
+
+.product-item > div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+}
 
 @media screen and (max-width: 1199px){
   .section-select{
 text-align: center;
     flex-direction: column;
      }
-  #item-count, .selected-count{
+
+  .selected-count{
   width: 100%;
   }
   .content{
@@ -143,40 +133,20 @@ text-align: center;
  height: 150px;
  font-size: 12;
   }
-
-  .step{
-    width: 250px;
-    height: 150px;
-    font-size: 12;
-    position: absolute;
-    top: 100%;
-    left: 0;
-  }
 }
 
-
 @media screen and (min-width: 320px){
-  .product-list{
-    width: 240px;
-  }
-  .product-item {
-    width: calc((100% - 30px) / 2); /* Ширина для 2 элементов с учетом gap */
-height: 105px;
-  }
-  
-  .product-item:nth-child(2n) {
-    margin-right: 0;
-  }
-
-   
+.product-item{
+  width: calc((100% - 20px) / 2);
+  padding-top: calc((100% - 20px) / 2);
+}
 }
 
 @media screen and (min-width: 768px){ 
-
-  .product-list{
-    width: 510px;
-  }
- 
+.product-list{
+  width: 768px;
+  margin-top: 60px;
+}
   .label-select{
     font-size: 18px;
   }
@@ -184,29 +154,27 @@ height: 105px;
     padding: 16px 45px;
   }
 
-  .product-item {
-    width: calc((100% - 60px) / 3); 
-   height:150px ;
-  }
-
-  .product-item:nth-child(3n) {
-    margin-right: 0;
-  }
+.product-item {
+  width: calc((100% - 40px) / 3);
+  padding-top: calc((100% - 40px) / 3)
+}
 }
 
 @media screen and (min-width: 1200px) {
  
     .product-list{
-      width: 890px;
+      width: 1200px;
+      margin-top: 20px;
     }
     .product-item {
-      width: calc((100% - 90px) / 4);
-      height: 200px; 
+      width: calc((100% - 60px) / 4);
+      padding-top: calc((100% - 60px) / 4); 
     }
-    
-    .product-item:nth-child(4n) {
-      margin-right: 0;
-    }
+
+   .wrapper{
+    margin-left: 120px;
+   }
+   
 }
 
 
