update infinitive scroll

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -9,20 +9,18 @@
   margin-bottom: 80px;
 }
 
-.section {
-  padding-top: 30px;
+section {
+  padding-top: 40px;
   padding-bottom: 30px;
+}
+
+main section:nth-child(2){
+  padding-bottom: 0;
 }
 
 section:nth-child(2n+1){
   background-color: #f6f6f6;
-  padding-bottom: 40px;}
-
-section:nth-child(1) {
-   background-image: url('../images/Vector1.png'), url('../images/Vector2.png');
-  background-size: 100px auto, 100px auto; 
-  background-repeat: no-repeat;
-  background-position: left 25% , right 30%;
+  padding-bottom: 40px;
 }
 
 .subtitle {
@@ -60,10 +58,19 @@ section:nth-child(1) {
   display: none;
 }
 
+
+.canvas{
+  background-image: url('../images/Vector1.png'), url('../images/Vector2.png'), url('../images/Vector_min_1.png');;
+  background-size: 50px auto, 50px auto, 30px auto; 
+  background-repeat: no-repeat;
+  background-position: top 27% left 5%, top 30% right 0, top 20%  right -50px;
+   
+}
 @media screen and (min-width: 320px) {
   .container {
     width: 320px;
   }
+
 }
 
 @media screen and (min-width: 768px){
@@ -72,15 +79,15 @@ section:nth-child(1) {
     display: flex;
   justify-content: center;
   }
+
+  .canvas{
+      background-size: 200px auto, 200px auto, 100px auto; 
+      background-position: left center , right 40%, top 20%  right -50px;
+     
+  }
 }
 
 @media screen and (min-width: 1200px){
-  section:nth-child(1) {
-    background-image: url('../images/Vector1.png'), url('../images/Vector2.png');
-    background-size: 200px auto, 200px auto; 
-    background-repeat: no-repeat;
-    background-position: left center , right 40%;
-  }
 
   .container {
     width: 1200px;
