--- a/src/css/product.css
+++ b/src/css/product.css
@@ -1,13 +1,4 @@
 
-.section-select {
-  display: flex;
-margin: 0 auto 30px;
-}
-
-.wrapper {
-  position: relative;
-}
-
 .label-select {
   display: inline-block;
   padding: 12px 20px;
@@ -17,22 +8,15 @@ margin: 0 auto 30px;
 }
 
 .selected-count {
-  display: inline-block;
+position: relative;
   white-space: nowrap;
-  pointer-events: none;
-  position: absolute;
-  top: 0;
-  right: 0;
-  display: block;
   margin-left: 0;
-  width: 122px;
   padding: 15px 45px;
-  font-size: 16px;
   font-weight: 900;
   color: white;
   background-color: var(--primary-color);
   border: var(--primary-color);
-  text-align: center;
+
   font-size: 12px;
   margin-top: 0;
 }
@@ -119,20 +103,71 @@ height: 20px;
   transform: translate(-50%, -50%); 
 }
 
+.count{
+  margin-right: 10px;
+}
+
+.dropdown-list{
+  position: absolute;
+  top: 100%;
+  right: 0;
+  margin: 0;
+  width: 100%;
+ background-color:  white;
+ color: black;
+ z-index: 3;
+ opacity: 0;
+ text-align: center;
+ transform: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.click-count-js{
+  display: flex;
+  align-items: center;
+ justify-content: center;
+}
+
+.selected-count .isOpen{
+  opacity: 1;
+  visibility: visible;
+}
+
+.item-count {
+  padding: 10px  20px;
+  border-bottom: 1px solid grey;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+}
+
+.item-count:hover{
+background-color: aliceblue;
+}
+.section-select {
+  display: flex;
+  border: 1px solid var(--primary-color);
+  flex-direction: column;
+    margin: 0 auto 30px;
+}
+
+#section3{
+  background-attachment: fixed;
+}
 @media screen and (max-width: 1199px){
   .section-select{
 text-align: center;
-    flex-direction: column;
+
+     }
+     .selected-count{
+      width: 100%;
      }
 
-  .selected-count{
-  width: 100%;
-  }
-  .content{
+   .content{
     width: 250px;
  height: 150px;
  font-size: 12;
   }
+
 }
 
 @media screen and (min-width: 320px){
@@ -151,7 +186,7 @@ text-align: center;
     font-size: 18px;
   }
   .selected-count{
-    padding: 16px 45px;
+    padding: 17px 45px;
   }
 
 .product-item {
@@ -171,10 +206,12 @@ text-align: center;
       padding-top: calc((100% - 60px) / 4); 
     }
 
-   .wrapper{
-    margin-left: 120px;
+  .section-select{
+    flex-direction: row;
+  }
+   .item-count{
+    padding: 17px 45px;
    }
-   
 }
 
 
